--- a/Denomica.AI.Extensions/Denomica.AI.Extensions.csproj
+++ b/Denomica.AI.Extensions/Denomica.AI.Extensions.csproj
@@ -3,12 +3,29 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <Title>Denomica.AI.Extensions</Title>
+    <Description>Denomica.AI.Extensions is a library that supports and extends AI services and capabilities in Azure.</Description>
+    <Copyright>Copyright (c) 2025 Denomica Oy</Copyright>
+    <PackageProjectUrl>https://github.com/Denomica/Denomica.AI.Extensions</PackageProjectUrl>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Denomica/Denomica.AI.Extensions</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.0.0-alpha.1</Version>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.2" />
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
